<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_strategy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anlddev.designmode.strategy.StrategyActivity">

    <TextView
        android:id="@+id/tv_rg_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_strategy_select"/>

    <RadioGroup
        android:id="@+id/rg_strategy_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rg_desc"
        android:layout_marginTop="@dimen/view_vertical_margin">
        <RadioButton
            android:id="@+id/rb_strategy_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_strategy_a"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_strategy_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_strategy_b"/>
        <RadioButton
            android:id="@+id/rb_strategy_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_strategy_c"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_strategy_invoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_strategy_select"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:text="@string/btn_strategy_invoke"
        android:onClick="btnStrategyInvokeOnClick"/>

    <TextView
        android:id="@+id/tv_strategy_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_strategy_invoke"
        android:layout_marginTop="@dimen/view_vertical_margin" />

</RelativeLayout>
