<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_observer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anlddev.designmode.observer.ObserverActivity">

    <Button
        android:id="@+id/btn_update_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_update_state"
        android:onClick="btnUpdateState"/>

    <LinearLayout
        android:id="@+id/ll_observer_a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="3"
        android:layout_below="@id/btn_update_state"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:gravity="center"
        android:background="@drawable/bg_rectangle_round_stroke_ccc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_observer_state_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="#f00"
            android:text="@string/text_unjoin"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_join"
            android:onClick="btnAddObserverA"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_observer_b"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="3"
        android:layout_below="@id/ll_observer_a"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:gravity="center"
        android:background="@drawable/bg_rectangle_round_stroke_ccc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_observer_state_b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="#f00"
            android:text="@string/text_unjoin"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_join"
            android:onClick="btnAddObserverB"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_observer_c"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="3"
        android:layout_below="@id/ll_observer_b"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:gravity="center"
        android:background="@drawable/bg_rectangle_round_stroke_ccc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_observer_state_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="#f00"
            android:text="@string/text_unjoin"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_join"
            android:onClick="btnAddObserverC"/>
    </LinearLayout>

</RelativeLayout>
